Fix height on mobile

--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ body {
 @media (max-width: 768px) {
     body {
         margin: 0;
+        height: auto;
     }
 }
 
